--- a/pom.xml
+++ b/pom.xml
@@ -8,5 +8,11 @@
     <artifactId>exercise1a</artifactId>
     <version>1.0-SNAPSHOT</version>
 
-
+    <dependencies>
+        <dependency>
+            <groupId>net.sf.jopt-simple</groupId>
+            <artifactId>jopt-simple</artifactId>
+            <version>6.0-alpha-1</version>
+        </dependency>
+    </dependencies>
 </project>
